# OpenGL-Practice

./: Application.cpp  Application.hpp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  output.txt
config/: config.txt
lib/include/: Renderer.h  Shader.h  Texture.hpp  VertexArray.h
lib/src/: IndexBuffer.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp
lib/vendor_src/: stb_image.cpp
models/header/: camera.hpp  node.hpp
models/src/: node.cpp
res/data/: cube.txt
res/shaders/: fragmentshader.glsl  fragmentshader1.glsl  fragmentshader2.glsl  fragmentshader3.glsl  vertexshader.glsl  vertexshader1.glsl  vertexshader2.glsl  vertexshader3.glsl
